--- a/frontend/views/partials/header.ejs
+++ b/frontend/views/partials/header.ejs
@@ -36,6 +36,9 @@
     <!-- leaflet -->
     <link rel="stylesheet" type="text/css" href="../js/leaflet.css" />
 
+    <!-- apex charts -->
+    <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
+
     <script type='text/javascript' src='../js/leaflet.js'></script>
 
     <link rel="stylesheet" href="../css/responsive.css" type="text/css" />
@@ -115,7 +118,7 @@
                             </li>
                             <li>
                                 <a href="/charts">
-                                    <div class="white-link-text">Chart</div>
+                                    <div class="white-link-text">Charts</div>
                                 </a>
                             </li>
                         </ul>
