added press release doc

--- a/frontend/views/legion/home.ejs
+++ b/frontend/views/legion/home.ejs
@@ -23,6 +23,8 @@
           <a href="https://dallasinnovates.com/fort-worth-founders-launch-platform-to-tie-concert-tickets-to-nfts/" target="_blank" class="list-group-item list-group-item-action"><strong>Fort Worth Founders Launch Platform to Tie Concert Tickets to NFTs</strong></a>
           <a href="https://finance.yahoo.com/news/neonox-brings-blockchain-nft-ticketing-175000323.html" target="_blank" class="list-group-item list-group-item-action"><strong>NeonOx Brings Blockchain and NFT Ticketing Solutions to Events Industry</strong></a>
           <a href="https://hypebeast.com/2022/3/lupe-fiasco-gucci-mane-defy-tickets-nft-platform" target="_blank" class="list-group-item list-group-item-action"><strong>Lupe Fiasco and Gucci Mane Are Selling Tickets to Their Upcoming Concerts as NFTs</strong></a>
+          <a href="https://crisisnottingham.com/posts/introducing-ontapp-tickets" target="_blank" class="list-group-item list-group-item-action"><strong>Crisis - INTRODUCING ONTAPP TICKETS</strong></a>
+          
         </div>
       </div>
 
