formated protocolDays into Date

--- a/frontend/views/charts/home.ejs
+++ b/frontend/views/charts/home.ejs
@@ -30,11 +30,8 @@
 <section id="content">
     <div class="content-wrap">
         <div class="container clearfix">
-            <div class="col_half m-0 p-0">
+            <div class="row m-0 p-0">
                 <div id="ticketChart"></div>
-            </div>
-            <div class="col_half col_last m-0 p-0">
-                <div id="usageChart"></div>
             </div>
             <div class="clear"></div>
             <div class="row m-0 p-0">
