getting ready to make public

--- a/frontend/views/charts/home.ejs
+++ b/frontend/views/charts/home.ejs
@@ -1,22 +1,24 @@
 <%- include ("../partials/header") %>
-<!-- <div id="page-menu" class="no-sticky">
-    <div id="page-menu-wrap">
+<div id="page-menu" class="no-sticky">
+    <div id="page-menu-wrap" class="mb-6">
         <div class="container clearfix">
             <nav>
                 <ul>
-                    <li><a href="#"><div>7 DAY</div></a></li>
-                    <li><a href="#"><div>30 DAY</div></a></li>
-                    <li><a href="#"><div>90 DAY</div></a></li>
-                </ul>
+                    <li><a href="#" onclick="updateChartData(7)"><div>7 DAY</div></a></li>
+                    <li><a href="#" onclick="updateChartData(30)"><div>30 DAY</div></a></li>
+                    <li><a href="#" onclick="getChartData(90)"><div>90 DAY</div></a></li>
+                    <li><a href="#" onclick="destroyCharts()"><div>destroy</div></a></li>
             </nav>
         <div id="page-submenu-trigger"><i class="icon-reorder"></i></div>
-    </div> -->
-
+    </div>
+</div>
 <!-- Content
     ============================================= -->
-<div id="ticketChart"></div>
+<div class="m-2">
+    <div id="ticketChart"></div>
 
-<div class="clear"></div>
-
-<div id="mixedChart"></div>
+    <div class="clear"></div>
+    
+    <div id="mixedChart"></div>
+</div>
 <%- include ("../partials/footer") %>
