--- a/frontend/views/usage/recent-mint.ejs
+++ b/frontend/views/usage/recent-mint.ejs
@@ -1,4 +1,11 @@
 <%- include ("../partials/header") %>
+<div class="marquee">
+    <div>
+      <span><h5>TRENDING:<a href="../event-profile/<%= locals.trendingEvent.thisEventResult.id %>"> <%= locals.helpers.truncate(locals.trendingEvent.thisEventResult.eventName, 30)%> by <%= locals.trendingEvent.thisEventResult.ticketeerName%>.</a></h5></span>
+      <span><h5>TRENDING:<a href="../event-profile/<%= locals.trendingEvent.thisEventResult.id %>"> <%= locals.helpers.truncate(locals.trendingEvent.thisEventResult.eventName, 30)%> by <%= locals.trendingEvent.thisEventResult.ticketeerName%>.</a></h5></span>
+    </div>
+  </div>
+
         <div id="mintContainer">
                     <div class="container-fluid py-4">
                         <div class="row newMints">
@@ -18,7 +25,7 @@
                                                             <span class="text-sm font-weight-bolder"><%= locals.recentMints.firstFour[i].event.ticketeerName %></span></a>
                                                     </h5>
                                                 </div>
-                                                <div class="imgTile" style="background-image: url('<%= locals.recentMints.firstFour[i].event.imageUrl %>' ");>
+                                                <div class="imgTile" style="background-image: url('<%= locals.recentMints.firstFour[i].event.imageUrl %>' " );>
                                                 </div>
                                                 <h6>
                                                     <%= Number(locals.recentMints.firstFour[i].getDebitedFromSilo).toFixed(6) %> $GET used as fuel.
