new active ticketeer page

--- a/frontend/views/partials/header.ejs
+++ b/frontend/views/partials/header.ejs
@@ -121,6 +121,12 @@
                                     <div class="white-link-text">Charts</div>
                                 </a>
                             </li>
+                            <li>
+                                <a href="/ticketeers">
+                                    <div class="white-link-text">Ticketeers</div>
+                                </a>
+                            </li>
+                            
                         </ul>
 
                     </nav>
