--- a/frontend/views/ticketeer-profile.ejs
+++ b/frontend/views/ticketeer-profile.ejs
@@ -14,7 +14,7 @@
             </h1>
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="/">Home</a></li>
-                <li class="breadcrumb-item">Ticketeers</li>
+                <li class="breadcrumb-item"><a href="/ticketeers/">Ticketeers</a></li>
                 <li class="breadcrumb-item active" aria-current="page">
                     <%= locals.ticketeerName%>
                 </li>
