fixed chart page

--- a/frontend/views/charts/home.ejs
+++ b/frontend/views/charts/home.ejs
@@ -1,5 +1,5 @@
 <%- include ("../partials/header") %>
-<div id="page-menu" class="no-sticky">
+<!-- <div id="page-menu" class="no-sticky">
     <div id="page-menu-wrap" class="mb-6">
         <div class="container clearfix">
             <nav>
@@ -11,7 +11,7 @@
             </nav>
         <div id="page-submenu-trigger"><i class="icon-reorder"></i></div>
     </div>
-</div>
+</div> -->
 <!-- Content
     ============================================= -->
 <div class="m-2">
