--- a/frontend/views/partials/footer.ejs
+++ b/frontend/views/partials/footer.ejs
@@ -143,6 +143,8 @@
 	============================================= -->
 <script src="../js/functions.js"></script>
 
+<!-- Pagination -->
+<script src="../src/pagination.js"></script>
 
 <script src="../assets/js/soft-ui-dashboard.min.js?v=1.0.3"></script>
 <!--   Core JS Files   -->
