--- a/frontend/views/partials/header.ejs
+++ b/frontend/views/partials/header.ejs
@@ -36,6 +36,9 @@
     <!-- leaflet -->
     <link rel="stylesheet" type="text/css" href="../js/leaflet.css" />
 
+    <!-- Pagination -->
+    <link rel="stylesheet" type="text/css" href="../pagination/pagination.css" >
+
     <!-- apex charts -->
     <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
 
