--- a/frontend/views/partials/header.ejs
+++ b/frontend/views/partials/header.ejs
@@ -69,8 +69,8 @@
 
 </head>
 
-<body class="stretched">
-
+<body class="stretched" >
+<div id="gradient" >
     <!-- Document Wrapper
 	============================================= -->
     <div id="wrapper" class="clearfix">
