--- a/frontend/views/active-ticketeers.ejs
+++ b/frontend/views/active-ticketeers.ejs
@@ -10,7 +10,7 @@
                     <div class="col-lg-12" style="padding: 30px;">
                         <div class="text-left">
                             <h2>Recently Active Ticketeers</h2>
-                            <p>Here is a list of the ticketeers that have shown active within a scan of the subGraph</p>
+                            <p>Here is a list of the ticketeers that have shown active within a scan of the subGraph.</p>
                             <% for(var i = 0; i < locals.ticketeers.length ; i++) {%>
                                 <h5><a href="/ticketeer/<%= locals.ticketeers[i]%>"><%= locals.ticketeers[i]%></a></h5>
                             <% } %>
